--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/InteractiveToolkit"]
 	path = libs/InteractiveToolkit
-	url = git@github.com:A-Ribeiro/InteractiveToolkit.git
+	url = https://github.com/A-Ribeiro/InteractiveToolkit.git
