--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,6 +221,7 @@ add_subdirectory(src/astar-on-roguelike-matrix)
 add_subdirectory(src/callback-handling)
 add_subdirectory(src/ease-core)
 add_subdirectory(src/event-handling)
+add_subdirectory(src/find-rsqrt-parameters)
 add_subdirectory(src/math-core)
 add_subdirectory(src/on-abort-handling)
 add_subdirectory(src/pattern-match)
