--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,54 +18,8 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-# automatically setup IDE source group. Useful for VSStudio
-macro(define_source_group )
-    foreach(entry IN ITEMS ${ARGN})
-        get_filename_component(dirname "${entry}" DIRECTORY )
-        if (dirname)
-            string(REPLACE "/" "\\" dirname_replaced ${dirname})
-            source_group(${dirname_replaced} FILES ${entry})
-        else()
-            source_group("" FILES ${entry})
-        endif()
-    endforeach()
-endmacro()
-
-macro(configure_build_flags projectname inputfile outputfile)
-    set(cmake_build_flags "")
-
-    set(target_compile_defs)
-    if (TARGET ${projectname})
-        get_target_property(target_compile_defs ${projectname} COMPILE_DEFINITIONS)
-        if ("${target_compile_defs}" STREQUAL "target_compile_defs-NOTFOUND")
-            set(target_compile_defs)
-        endif()
-    endif()
-
-    # get build flags
-    #get_directory_property(aux COMPILE_DEFINITIONS)
-    set(aux)
-
-    # copy target defs that are not in dir defs
-    foreach(target_compile_opt ${target_compile_defs})
-        if (NOT "${target_compile_opt}" IN_LIST aux)
-            list(APPEND aux ${target_compile_opt})
-        endif()
-    endforeach()
-
-
-    foreach(define ${aux})
-        if(NOT "${define}" STREQUAL "NDEBUG")
-            set(cmake_build_flags "${cmake_build_flags}#ifndef ${define}\n    #define ${define}\n#endif\n")
-        endif()
-    endforeach()
-
-    configure_file(
-        "${CMAKE_CURRENT_SOURCE_DIR}/${inputfile}"
-        "${CMAKE_CURRENT_SOURCE_DIR}/${outputfile}"
-        @ONLY
-    )
-endmacro()
+include(cmake_tools.cmake)
+#include(cmake_include.cmake)
 
 # configure compile vars
 if(WIN32)
@@ -107,7 +61,7 @@ elseif(APPLE)
     endif()
     #SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -all_load")
     #SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -v")
-    SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -ObjC")
+    #SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -ObjC")
 elseif(UNIX)
     #
     # Linux, BSD, Solaris, Minix
@@ -122,94 +76,10 @@ elseif(UNIX)
 else()
     message(FATAL_ERROR "Cmake not configured for this OS")
 endif()
-############################################################################
-# Detect Raspberry Pi
-############################################################################
-if(UNIX AND EXISTS "/opt/vc/include/bcm_host.h" AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
-    set(EXAMPLE_RPI true CACHE BOOL "Set this if you are buinding for Raspberry PI" )
-    add_definitions(-DEXAMPLE_RPI)
-    # RPI OMX Compilation Flag on 32bit: -DOMX_SKIP64BIT
-    if( CMAKE_SIZEOF_VOID_P EQUAL 4 )
-        add_definitions(-DOMX_SKIP64BIT)
-    endif()
-    link_directories(/opt/vc/lib/)
-    include_directories(
-        /opt/vc/include/interface/vcos/pthreads
-        /opt/vc/include/interface/vmcs_host/linux
-        /opt/vc/include
-    )
-    set(EGL_INCLUDE_DIR /opt/vc/include)
-    set(EGL_LIBRARY /opt/vc/lib/libbrcmEGL.so)
-    set(GLES_INCLUDE_DIR /opt/vc/include)
-    set(GLES_LIBRARY /opt/vc/lib/libbrcmGLESv2.so)
-    set(RPI_LIBRARIES bcm_host openmaxil vcos vchiq_arm dl)
-    message(STATUS "[RPI Detector] Defined Libraries Variables: " )
-    message(STATUS "    RPI_LIBRARIES")
-    message(STATUS "    GLES_LIBRARY")
-    message(STATUS "    EGL_LIBRARY")
-endif()
-############################################################################
-# Detect NEON compatible environment
-############################################################################
-if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
-    set(EXAMPLE_NEON ON CACHE BOOL "Turn on NEON optimizations." )
-    if (EXAMPLE_NEON)
-		add_definitions(-DEXAMPLE_NEON)
-        add_compile_options(-mfpu=neon -finline-functions)
-        message(STATUS "[NEON ENABLED]")
-    endif()
-endif()
-############################################################################
-# Detect OpenMP compatible environment
-############################################################################
-if(NOT CMAKE_GENERATOR STREQUAL Xcode)
-    find_package(OpenMP)
-    if (OPENMP_FOUND)
-        set(EXAMPLE_OPENMP ON CACHE BOOL "Turn on OPENMP optimizations." )
-        if (EXAMPLE_OPENMP)
-            add_definitions(-DEXAMPLE_OPENMP)
-            include_directories(${OpenMP_C_INCLUDE_DIRS} ${OpenMP_CXX_INCLUDE_DIRS})
-            set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-            set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-            set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-        endif()
-    endif()
-endif()
-############################################################################
-# Detect SSE2 compatible environment
-############################################################################
-if(NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
-    set(EXAMPLE_SSE2 ON CACHE BOOL "Turn on SSE2 optimizations.")
-    if (EXAMPLE_SSE2)
-		if(MSVC)
-			#message(STATUS "DETECT_SSE2: You are building the code for Visual Studio.")
-			#message(STATUS "             the containers (vector, set, map, etc...)")
-			#message(STATUS "             need to be aligned with ssealign<T,16>")
-			add_definitions(-DEXAMPLE_SSE2) # /arch:SSE2 /Gz __stdcall
-		else()
-			add_definitions(-DEXAMPLE_SSE2)
-			add_compile_options(-mmmx -msse -msse2 -msse3 -msse4.1 -mfpmath=sse -minline-all-stringops -finline-functions)
-		endif()
-    endif()
-endif()
-
-
-############################################################################
-# Print Result
-############################################################################
-message(STATUS "")
-message(STATUS "All Detection Set:")
-message(STATUS "")
-message(STATUS "[EXAMPLE_RPI    ${EXAMPLE_RPI}]")
-message(STATUS "[EXAMPLE_NEON   ${EXAMPLE_NEON}]")
-message(STATUS "[EXAMPLE_OPENMP ${EXAMPLE_OPENMP}]")
-message(STATUS "[EXAMPLE_SSE2   ${EXAMPLE_SSE2}]")
-message(STATUS "")
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-
 
 add_subdirectory(libs/InteractiveToolkit "${CMAKE_BINARY_DIR}/lib/InteractiveToolkit")
 find_package(InteractiveToolkit REQUIRED)
