--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,3 +109,6 @@ add_subdirectory(src/sorting)
 
 add_subdirectory(src/ipc-queue)
 add_subdirectory(src/ipc-shared-buffer)
+
+add_subdirectory(src/platform-thread-queue)
+
