added socket udp example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,8 +109,9 @@ add_subdirectory(src/sorting)
 
 add_subdirectory(src/ipc-queue)
 add_subdirectory(src/ipc-shared-buffer)
-
-add_subdirectory(src/platform-thread-queue)
 add_subdirectory(src/platform-process)
+add_subdirectory(src/platform-thread-queue)
+
+add_subdirectory(src/socket-udp)
 
 
