added spread test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ add_subdirectory(src/pattern-match)
 add_subdirectory(src/property)
 add_subdirectory(src/random)
 add_subdirectory(src/sorting)
+add_subdirectory(src/spread-test)
 add_subdirectory(src/ipc-queue)
 add_subdirectory(src/ipc-shared-buffer)
 add_subdirectory(src/platform-process)
