--- a/src/math-core-simd-test/CMakeLists.txt
+++ b/src/math-core-simd-test/CMakeLists.txt
@@ -13,6 +13,9 @@ set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "BIN")
 target_link_libraries( ${PROJECT_NAME} ${INTERACTIVETOOLKIT_LIBRARIES})
 
 
-if (MSVC)
-    target_compile_options( ${PROJECT_NAME} PUBLIC /Zm2000 /O1 /MP1)
-endif()
+# if (MSVC)
+#     target_compile_options( 
+#         ${PROJECT_NAME} PUBLIC 
+#         $<$<CONFIG:Release>:/Zm2000 /MP1>
+#     )
+# endif()
