fix: improve platform-specific library linking in CMakeLists and SystemCertificates

--- a/src/socket-tcp-tls/CMakeLists.txt
+++ b/src/socket-tcp-tls/CMakeLists.txt
@@ -18,8 +18,9 @@ target_link_libraries( ${PROJECT_NAME}
     mbedtls-all
 )
 
-# SystemCertificates on Windows
 if(WIN32)
+    # SystemCertificates on Windows
     target_link_libraries(${PROJECT_NAME} Crypt32)
+elseif(APPLE)
+    target_link_libraries(${PROJECT_NAME} Security CoreFoundation)
 endif()
-
