added websocket example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,3 +140,4 @@ add_subdirectory(src/extension-images)
 add_subdirectory(src/extension-writing-reading-data)
 add_subdirectory(src/extension-socket-tcp-tls)
 add_subdirectory(src/extension-http-server-async)
+add_subdirectory(src/extension-websocket)
